# platform-golden-path

./: .gitignore  CLAUDE.md  PROMPTS.md  README.md
.github/workflows/: README.md  golden-path.yml
docs/: README.md  gitops-promotion.md
templates/service-go/: README.md  go.mod
templates/service-go/.github/workflows/: ci.yml
templates/service-python/: Dockerfile  main.py  main_test.py  pyproject.toml
templates/service-python/.github/workflows/: ci.yml
